set the crawl level to 0 for release

--- a/main.ipynb
+++ b/main.ipynb
@@ -2367,8 +2367,8 @@
     "for card_name in card_names:\n",
     "    print(card_name)\n",
     "    \n",
-    "    #combos = crawl_everything_for_a_card_name(card_name, color_name)\n",
-    "    combos = digging_deeper(card_name, color_name)\n",
+    "    combos = crawl_everything_for_a_card_name(card_name, color_name)\n",
+    "    #combos = digging_deeper(card_name, color_name)\n",
     "\n",
     "    combos_plus_one.append(combos)"
    ]
