remove: my own decklist from main

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "685131fc-7239-4375-b011-47d417366c6b",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pyvis in c:\\users\\michi\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (0.3.2)\n",
+      "Requirement already satisfied: pyvis in c:\\users\\michi\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (0.3.2)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
       "Requirement already satisfied: beautifulsoup4 in c:\\users\\michi\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (4.13.3)\n",
       "Requirement already satisfied: ipython>=5.3.0 in c:\\users\\michi\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pyvis) (8.32.0)\n",
       "Requirement already satisfied: jinja2>=2.9.6 in c:\\users\\michi\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pyvis) (3.1.5)\n",
@@ -31,8 +32,7 @@
       "Requirement already satisfied: wcwidth in c:\\users\\michi\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython>=5.3.0->pyvis) (0.2.13)\n",
       "Requirement already satisfied: executing>=1.2.0 in c:\\users\\michi\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from stack_data->ipython>=5.3.0->pyvis) (2.2.0)\n",
       "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\michi\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from stack_data->ipython>=5.3.0->pyvis) (3.0.0)\n",
-      "Requirement already satisfied: pure-eval in c:\\users\\michi\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from stack_data->ipython>=5.3.0->pyvis) (0.2.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: pure-eval in c:\\users\\michi\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from stack_data->ipython>=5.3.0->pyvis) (0.2.3)\n"
      ]
     },
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "bee1170a-fc46-4a84-8531-4295bbe808b3",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "761945c4-3265-40a7-b7c3-01611c6d78ee",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "6c19e7e5-de88-4a5b-8d66-01b7baf33f8a",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "1b25b4c0-b012-4385-b8a9-2c8093670ea2",
    "metadata": {
     "scrolled": true
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "aab59e2c-ae99-4728-bab6-122d3ff707ed",
    "metadata": {
     "scrolled": true
@@ -301,7 +301,148 @@
     "card_names = [\n",
     "\"Abdel Adrian, Gorion's Ward\",\n",
     "\"Candlekeep Sage\",\n",
-    "\"Paladin Class\"\n",
+    "\"Paladin Class\",\n",
+    "\"Cloudshift\",\n",
+    "\"Deadeye Navigator\",\n",
+    "\"Ephemerate\",\n",
+    "\"Essence Flux\",\n",
+    "\"Felidar Guardian\",\n",
+    "\"Flicker of Fate\",\n",
+    "\"Icewind Stalwart\",\n",
+    "\"Lumbering Battlement\",\n",
+    "\"Mirror of Life Trapping\",\n",
+    "\"Momentary Blink\",\n",
+    "\"Oji, the Exquisite Blade\",\n",
+    "\"Pegasus Guardian // Rescue the Foal\",\n",
+    "\"Phantom Steed\",\n",
+    "\"Preston, the Vanisher\",\n",
+    "\"Restoration Angel\",\n",
+    "\"Soulherder\",\n",
+    "\"Teleportation Circle\",\n",
+    "\"Wispweaver Angel\",\n",
+    "\"Wormfang Drake\",\n",
+    "\"Clever Impersonator\",\n",
+    "\"Clone\",\n",
+    "\"Mirror Image\",\n",
+    "\"Hama Pashar, Ruin Seeker\",\n",
+    "\"Tomb of Horrors Adventurer\",\n",
+    "\"Displacer Beast\",\n",
+    "\"The Council of Four\",\n",
+    "\"Veteran Dungeoneer\",\n",
+    "\"Goliath Paladin\",\n",
+    "\"Nadaar, Selfless Paladin\",\n",
+    "\"Midnight Pathlighter\",\n",
+    "\"Adarkar Wastes\",\n",
+    "\"Castle Vantress\",\n",
+    "\"Command Tower\",\n",
+    "\"Deserted Beach\",\n",
+    "\"Dungeon Descent\",\n",
+    "\"Glacial Fortress\",\n",
+    "\"Hengegate Pathway // Mistgate Pathway\",\n",
+    "\"Mystic Sanctuary\",\n",
+    "\"Port Town\",\n",
+    "\"Prairie Stream\",\n",
+    "\"Reliquary Tower\",\n",
+    "\"Sea of Clouds\",\n",
+    "\"Skycloud Expanse\",\n",
+    "\"Windbrisk Heights\",\n",
+    "\"Authority of the Consuls\",\n",
+    "\"Glorious Protector\",\n",
+    "\"Seasoned Dungeoneer\",\n",
+    "\"Aarakocra Sneak\",\n",
+    "\"Arcane Signet\",\n",
+    "\"Cloud of Faeries\",\n",
+    "\"Gilded Lotus\",\n",
+    "\"Loyal Warhound\",\n",
+    "\"Peregrine Drake\",\n",
+    "\"Sarevok's Tome\",\n",
+    "\"Sol Ring\",\n",
+    "\"Archaeomancer\",\n",
+    "\"Sun Titan\",\n",
+    "\"Bar the Gate\",\n",
+    "\"Dawnbringer Cleric\",\n",
+    "\"Detention Sphere\",\n",
+    "\"Eccentric Apprentice\",\n",
+    "\"Fiend Hunter\",\n",
+    "\"Long River's Pull\",\n",
+    "\"Negate\",\n",
+    "\"Render Silent\",\n",
+    "\"Saw It Coming\",\n",
+    "\"Supreme Verdict\",\n",
+    "\"Vanquish the Horde\",\n",
+    "\"White Plume Adventurer\",\n",
+    "\"Archivist of Oghma\",\n",
+    "\"Ascend from Avernus\",\n",
+    "\"Cloudblazer\",\n",
+    "\"Dream Fracture\",\n",
+    "\"Fraying Line\",\n",
+    "\"Illusionist's Stratagem\",\n",
+    "\"Intruder Alarm\",\n",
+    "\"Juvenile Mist Dragon\",\n",
+    "\"Karmic Guide\",\n",
+    "\"Leonin Relic-Warder\",\n",
+    "\"Modify Memory\",\n",
+    "\"Propaganda\",\n",
+    "\"Recruitment Drive\",\n",
+    "\"Reflections of Littjara\",\n",
+    "\"Riverwise Augur\",\n",
+    "\"Roving Harper\",\n",
+    "\"Rug of Smothering\",\n",
+    "\"Rumor Gatherer\",\n",
+    "\"Sailor of Means\",\n",
+    "\"Spark Double\",\n",
+    "\"Stick Together\",\n",
+    "\"Swan Song\",\n",
+    "\"Swiftfoot Boots\",\n",
+    "\"Valiant Endeavor\",\n",
+    "\"Vanish into Memory\",\n",
+    "\"Virtue of Knowledge // Vantress Visions\",\n",
+    "\"Volo, Itinerant Scholar\",\n",
+    "\"War Room\",\n",
+    "\"You Come to a River\",\n",
+    "\"You Find the Villains' Lair\",\n",
+    "\"You're Confronted by Robbers\",\n",
+    "\"Your Temple Is Under Attack\",\n",
+    "\"Absorb\",\n",
+    "\"Ajani's Welcome\",\n",
+    "\"Blur\",\n",
+    "\"Brago, King Eternal\",\n",
+    "\"Charming Prince\",\n",
+    "\"Cloister Gargoyle\",\n",
+    "\"Commander's Sphere\",\n",
+    "\"Conjurer's Closet\",\n",
+    "\"Counterspell\",\n",
+    "\"Coveted Jewel\",\n",
+    "\"Decanter of Endless Water\",\n",
+    "\"Devoted Paladin\",\n",
+    "\"Disorder in the Court\",\n",
+    "\"Displace\",\n",
+    "\"Displacer Kitten\",\n",
+    "\"Divine Smite\",\n",
+    "\"Dungeon Delver\",\n",
+    "\"Dungeoneer's Pack\",\n",
+    "\"Far Traveler\",\n",
+    "\"Fellwar Stone\",\n",
+    "\"Feywild Caretaker\",\n",
+    "\"Ghostly Flicker\",\n",
+    "\"Glasspool Mimic // Glasspool Shore\",\n",
+    "\"Guardian of Faith\",\n",
+    "\"Hallowed Respite\",\n",
+    "\"Irenicus's Vile Duplication\",\n",
+    "\"Journey to Nowhere\",\n",
+    "\"Justiciar's Portal\",\n",
+    "\"Lae'zel's Acrobatics\",\n",
+    "\"Oblivion Ring\",\n",
+    "\"Panharmonicon\",\n",
+    "\"Phantasmal Image\",\n",
+    "\"Potion of Healing\",\n",
+    "\"Radiant Solar\",\n",
+    "\"Slip On the Ring\",\n",
+    "\"Splash Portal\",\n",
+    "\"Suspension Field\",\n",
+    "\"Touch the Spirit Realm\",\n",
+    "\"Trailblazer's Torch\",\n",
+    "\"Undercellar Sweep\"\n",
     "]\n"
    ]
   },
@@ -2527,8 +2668,8 @@
     "for card_name in card_names:\n",
     "    print(card_name)\n",
     "    \n",
-    "    #combos = crawl_everything_for_a_card_name(card_name, color_name)\n",
-    "    combos = digging_deeper(card_name, color_name)\n",
+    "    combos = crawl_everything_for_a_card_name(card_name, color_name)\n",
+    "    #combos = digging_deeper(card_name, color_name)\n",
     "\n",
     "    combos_plus_one.append(combos)"
    ]
